--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -63,4 +63,6 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+    implementation project(':domain')
+    implementation project(':data')
 }
