--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,6 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "StockApp"
-include ':app'
+include ':presentation'
+include ':data'
+include ':domain'
