1. 웹소켓 로직 적용(테스트 확인 필요) 2. Presentation의 ViewModel      ->Domain의 UseCase,Repository(Interface)      ->Data의 Repository(Implements),RemoteDataSource로 향하는 user request scene 적용      추후, 응답 데이터를 받아 Presentation 영역으로의 reponse scene 적용 예정

--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -43,4 +43,7 @@ dependencies {
     // Hilt dependencies
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    // WebSocket dependencies
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
 }
