--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.hilt_version = '2.44'
+    ext {
+        hilt_version = '2.44'
+        okhttp_version = '4.9.3'
+    }
+
     repositories {
         google()
         mavenCentral()
