--- a/data/build.gradle
+++ b/data/build.gradle
@@ -44,4 +44,7 @@ dependencies {
     // Hilt dependencies
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    // WebSocket dependencies
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
 }
