웹소켓 동작 확인을 위해 업비트 웹소켓 URL을 활용하여 비트코인 원화 실시간 데이터 수신 로직 적용

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -74,4 +74,7 @@ dependencies {
 
     // WebSocket dependencies
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+
+    // Gson dependencies
+    implementation "com.google.code.gson:gson:$gson_version"
 }
