--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext {
         hilt_version = '2.44'
         okhttp_version = '4.9.3'
+        gson_version = '2.8.9'
     }
 
     repositories {
