--- a/data/build.gradle
+++ b/data/build.gradle
@@ -47,4 +47,7 @@ dependencies {
 
     // WebSocket dependencies
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+
+    // Gson dependencies
+    implementation "com.google.code.gson:gson:$gson_version"
 }
