가상화폐 마켓코드를 얻어오기 위해 Retrofit API 통한 서버 연동 로직 적용      (코루틴으로 retrofit 사용시 enqueue 메소드를 적용할 필요가 없음)

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -77,4 +77,8 @@ dependencies {
 
     // Gson dependencies
     implementation "com.google.code.gson:gson:$gson_version"
+
+    // Retrofit2 dependencies
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 }
