--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         hilt_version = '2.44'
         okhttp_version = '4.9.3'
         gson_version = '2.8.9'
+        retrofit_version = '2.9.0'
     }
 
     repositories {
