--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@ buildscript {
         okhttp_version = '4.9.3'
         gson_version = '2.8.9'
         retrofit_version = '2.9.0'
+        navigation_compose_version = '2.5.3'
+        hilt_navigation_compose_version = '1.0.0'
+        compose_viewmodel_version = '2.4.1'
     }
 
     repositories {
