--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -81,4 +81,13 @@ dependencies {
     // Retrofit2 dependencies
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
+    // Navigation Compose dependencies
+    implementation "androidx.navigation:navigation-compose:$navigation_compose_version"
+
+    // Hilt Navigation Compose dependencies
+    implementation("androidx.hilt:hilt-navigation-compose:$hilt_navigation_compose_version")
+
+    // Compose ViewModel dependencies
+    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:$compose_viewmodel_version")
 }
