1. 앱 시작시 Intro 화면에서 가상화폐 마켓코드를 서버로부터 받아서(Retrofit 통신) RoomDB에 저장하도록 로직 적용

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         navigation_compose_version = '2.5.3'
         hilt_navigation_compose_version = '1.0.0'
         compose_viewmodel_version = '2.4.1'
+        room_version = "2.4.2"
     }
 
     repositories {
