--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         hilt_navigation_compose_version = '1.0.0'
         compose_viewmodel_version = '2.4.1'
         room_version = "2.4.2"
+        compose_livedata_version = '1.3.2'
     }
 
     repositories {
