--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -94,4 +94,7 @@ dependencies {
 
     // RoomDB dependencies
     implementation "androidx.room:room-runtime:$room_version"
+
+    // Compose LiveData dependencies
+    implementation("androidx.compose.runtime:runtime-livedata:$compose_livedata_version")
 }
