--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
         android:theme="@style/Theme.StockApp"
         tools:targetApi="31">
         <activity
+            android:name=".view.TestActivity"
+            android:exported="false"
+            android:label="@string/title_activity_test"
+            android:theme="@style/Theme.StockApp" />
+        <activity
             android:name=".view.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
