--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -7,12 +7,12 @@ plugins {
 
 android {
     namespace 'com.neverdiesoul.stockapp'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.neverdiesoul.stockapp"
         minSdk 23
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -57,7 +57,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3:1.1.1'
+    implementation 'androidx.compose.material3:material3-android:1.2.0-alpha05'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
