1. 상세화면 호가 탭에 AndroidView를 구성하고 웹뷰를 배치 - 추후, 호가 정보는 웹으로 개발한 소스를 GitHub(무료호스팅)에 배포하여 웹뷰로 볼 수 있도록 할 예정

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -37,6 +37,7 @@ android {
     }
     buildFeatures {
         compose true
+        viewBinding true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.4.5'
@@ -53,15 +54,14 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
-    implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3-android:1.2.0-alpha05'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
@@ -97,4 +97,10 @@ dependencies {
 
     // Compose LiveData dependencies
     implementation("androidx.compose.runtime:runtime-livedata:$compose_livedata_version")
+
+    // Compose ViewBinding
+    implementation("androidx.compose.ui:ui-viewbinding:$compose_viewbinding_version")
+
+    // Constraintlayout
+    implementation("androidx.constraintlayout:constraintlayout:2.1.4")
 }
