--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         compose_viewmodel_version = '2.4.1'
         room_version = "2.4.2"
         compose_livedata_version = '1.3.2'
+        compose_viewbinding_version = '1.5.0'
     }
 
     repositories {
