1. MPAndroidChart 라이브러리를 활용하여 상세화면 차트 탭에 Candle Chart 적용하여 개발 중

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -103,4 +103,7 @@ dependencies {
 
     // Constraintlayout
     implementation("androidx.constraintlayout:constraintlayout:2.1.4")
+
+    // MPAndroidChart
+    implementation("com.github.PhilJay:MPAndroidChart:v3.1.0")
 }
