1. Intro 화면에 Lottie 이미지 적용(무료 이미지 적용 from https://lottiefiles.com/)

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -106,4 +106,7 @@ dependencies {
 
     // MPAndroidChart
     implementation("com.github.PhilJay:MPAndroidChart:v3.1.0")
+
+    // Lottie
+    implementation("com.airbnb.android:lottie-compose:6.1.0")
 }
